// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreviewList /> renders correctly with posts 1`] = `
<div
  className="postPreviewList"
>
  <div
    className="post postLarge"
    key="0"
  >
    <PostPreview
      categories={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "name": "categoryName1",
            "textColor": "#000000",
          },
          Object {
            "backgroundColor": "#FFFFFF",
            "name": "categoryName1",
            "textColor": "#000000",
          },
        ]
      }
      image="image"
      lead="Lead"
      publishAt="2017-11-01 18:11:44+00:00"
      slug="slug1"
      title="post1"
    />
  </div>
  <div
    className="post"
    key="1"
  >
    <PostPreview
      categories={Array []}
      image="image"
      lead="Lead"
      publishAt="2017-11-01 18:11:44+00:01"
      slug="slug2"
      title="post2"
    />
  </div>
  <HighlightedShows
    key="highlightedShows"
    shows={
      Array [
        Object {
          "id": 4972,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/76prosent.jpg",
          "published": "2019-10-02 16:04:31+00:00",
          "showTitle": "67% Sikkert",
          "text": "Skilpadden Chilli har voldtatt skilpadden Milli. Tønsberg blad gjør sin første og siste opptreden. Edvart og Johannes får fullstendig overtenning til Sofie milde ergelse. Ellers beklager vi.",
          "title": "Episode 3 - Skilpaddevoldtekt og ellers god stemning",
        },
        Object {
          "id": 4970,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/logo.png",
          "published": "2019-10-01 16:04:31+00:00",
          "showTitle": "Blyforgiftning",
          "text": "Vi spiller musikk fra dette årets Høstsabbat-festival i Oslo! Doom/sludge/stoner står på tapetet, og vi har besøk av musikkredaktør i Under Dusken, Maren Busterud!",
          "title": "Høstsabbat spessial 01.10.19",
        },
        Object {
          "id": 4984,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/Feber_logo_profil.png",
          "published": "2019-10-02 16:04:31+00:00",
          "showTitle": "FEBER",
          "text": "Safario, aka Kacper, spiller på Knaus under UKA. Han tok med seg Arez og Gerald Ofori en tur innom studio først. På sendinga tar vi for oss de nye albumene til Arif, Danny Brown og Lil Halima og spiller ellers masse bra ny musikk!",
          "title": "FEBER tar deg med på Safari(o)",
        },
      ]
    }
  />
</div>
`;

exports[`<PostPreviewList /> renders correctly without posts 1`] = `
<div
  className="postPreviewList"
>
  <HighlightedShows
    key="highlightedShows"
    shows={
      Array [
        Object {
          "id": 4972,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/76prosent.jpg",
          "published": "2019-10-02 16:04:31+00:00",
          "showTitle": "67% Sikkert",
          "text": "Skilpadden Chilli har voldtatt skilpadden Milli. Tønsberg blad gjør sin første og siste opptreden. Edvart og Johannes får fullstendig overtenning til Sofie milde ergelse. Ellers beklager vi.",
          "title": "Episode 3 - Skilpaddevoldtekt og ellers god stemning",
        },
        Object {
          "id": 4970,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/logo.png",
          "published": "2019-10-01 16:04:31+00:00",
          "showTitle": "Blyforgiftning",
          "text": "Vi spiller musikk fra dette årets Høstsabbat-festival i Oslo! Doom/sludge/stoner står på tapetet, og vi har besøk av musikkredaktør i Under Dusken, Maren Busterud!",
          "title": "Høstsabbat spessial 01.10.19",
        },
        Object {
          "id": 4984,
          "imgUrl": "https://radiorevolt.no/media/uploads/images/Feber_logo_profil.png",
          "published": "2019-10-02 16:04:31+00:00",
          "showTitle": "FEBER",
          "text": "Safario, aka Kacper, spiller på Knaus under UKA. Han tok med seg Arez og Gerald Ofori en tur innom studio først. På sendinga tar vi for oss de nye albumene til Arif, Danny Brown og Lil Halima og spiller ellers masse bra ny musikk!",
          "title": "FEBER tar deg med på Safari(o)",
        },
      ]
    }
  />
</div>
`;
